WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238584
REGRESSION(
r291797
): [ wk1 ] 5 imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size* tests are constant text failures
https://bugs.webkit.org/show_bug.cgi?id=238584
Summary
REGRESSION(r291797): [ wk1 ] 5 imported/w3c/web-platform-tests/css/css-sizing...
Dawn Morningstar
Reported
2022-03-30 18:36:21 PDT
imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-001.html imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-002.html imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-003.html imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-004.html imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-005.html Are all constant failures on wk1 since their introduction in
r291797
. HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-sizing%2Fcontain-intrinsic-size%2Fauto-001.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-sizing%2Fcontain-intrinsic-size%2Fauto-002.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-sizing%2Fcontain-intrinsic-size%2Fauto-003.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-sizing%2Fcontain-intrinsic-size%2Fauto-004.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-sizing%2Fcontain-intrinsic-size%2Fauto-005.html
DIFF: --- /Volumes/Data/worker/monterey-debug-applesilicon-tests-wk1/build/layout-test-results/imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-001-expected.txt +++ /Volumes/Data/worker/monterey-debug-applesilicon-tests-wk1/build/layout-test-results/imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-001-actual.txt @@ -1,4 +1,6 @@ -50 +CONSOLE MESSAGE: ReferenceError: Can't find variable: ResizeObserver -PASS contain-intrinsic-size: auto +Harness Error (FAIL), message = ReferenceError: Can't find variable: ResizeObserver +NOTRUN contain-intrinsic-size: auto + DIFF-URL:
https://build.webkit.org/results/Apple-Monterey-Debug-AppleSilicon-WK1-Tests/r292122%20(2024)/imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-001-diff.txt
Attachments
Patch
(5.26 KB, patch)
2022-03-31 07:27 PDT
,
cathiechen
no flags
Details
Formatted Diff
Diff
Patch
(7.15 KB, patch)
2022-03-31 07:48 PDT
,
cathiechen
no flags
Details
Formatted Diff
Diff
Patch
(5.40 KB, patch)
2022-04-01 06:20 PDT
,
cathiechen
no flags
Details
Formatted Diff
Diff
Patch
(5.30 KB, patch)
2022-04-01 19:50 PDT
,
cathiechen
no flags
Details
Formatted Diff
Diff
Patch
(7.16 KB, patch)
2022-04-02 08:10 PDT
,
cathiechen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-03-30 18:37:13 PDT
<
rdar://problem/91078798
>
Dawn Morningstar
Comment 2
2022-03-30 18:54:46 PDT
Marked expectations until this can be investigated
r292135
cathiechen
Comment 3
2022-03-31 07:27:14 PDT
Created
attachment 456234
[details]
Patch
EWS Watchlist
Comment 4
2022-03-31 07:28:29 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
cathiechen
Comment 5
2022-03-31 07:48:32 PDT
Created
attachment 456236
[details]
Patch
cathiechen
Comment 6
2022-04-01 06:20:44 PDT
Created
attachment 456356
[details]
Patch
Simon Fraser (smfr)
Comment 7
2022-04-01 10:46:02 PDT
Comment on
attachment 456356
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=456356&action=review
> Tools/DumpRenderTree/TestOptions.cpp:122 > - { "ResizeObserverEnabled", false }, > + { "ResizeObserverEnabled", true },
You can just remove the line.
> Tools/DumpRenderTree/TestOptions.cpp:171 > - { "ResizeObserverEnabled", false }, > + { "ResizeObserverEnabled", true },
DItto.
cathiechen
Comment 8
2022-04-01 19:44:16 PDT
Comment on
attachment 456356
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=456356&action=review
>> Tools/DumpRenderTree/TestOptions.cpp:122 >> + { "ResizeObserverEnabled", true }, > > You can just remove the line.
I see... Done, thanks!
>> Tools/DumpRenderTree/TestOptions.cpp:171 >> + { "ResizeObserverEnabled", true }, > > DItto.
Done
cathiechen
Comment 9
2022-04-01 19:50:29 PDT
Created
attachment 456429
[details]
Patch
cathiechen
Comment 10
2022-04-02 08:10:05 PDT
Created
attachment 456457
[details]
Patch
EWS
Comment 11
2022-04-04 01:39:06 PDT
Committed
r292284
(
249182@main
): <
https://commits.webkit.org/249182@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456457
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug