REGRESSION(r291797): [wk1] 5 contain-intrinsic-size* tests are constant text failures https://bugs.webkit.org/show_bug.cgi?id=238584

Reviewed by Simon Fraser.

Source/WTF:

Enable ResizeObserver for legacy WebKit.

* Scripts/Preferences/WebPreferencesExperimental.yaml:

Tools:

Enable ResizeObserver for wk1 test.

* DumpRenderTree/TestOptions.cpp:
(WTR::TestOptions::defaults):

LayoutTests:

* platform/mac-wk1/TestExpectations:
* platform/mac-wk1/imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-031-expected.txt: Removed.
* platform/mac-wk1/imported/w3c/web-platform-tests/resize-observer/change-layout-in-error-expected.txt: Removed.



Canonical link: https://commits.webkit.org/249182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292284 268f45cc-cd09-0410-ab3c-d52691b4dbfc